# Demoproject2

./: .gitignore  KANINISAMPLEREPORT.md  README.md  pyproject-old.toml  pyproject.toml  requirements.txt
src/demoproject2/: crew.py  crewbackup.py  main.py  mainbackup.py
src/demoproject2/config/: agents.yaml  tasks.yaml
utils/: throttling.py
